left column spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ img {
 
 .logo-container {
     height: auto;
-    width: 448px;
+    width: 400px;
     padding: 16px 24px 12px 24px;
     display: inline-block;
     background-color: orange;
